--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,7 @@
             "CodeIgniter\\ComposerScripts::postUpdate",
             "@composer dump-autoload"
         ],
-        "post-install-cmd": [
-            "CodeIgniter\\ComposerScripts::postInstall",
-            "@composer dump-autoload"
-        ],
+        "post-install-cmd": ["CodeIgniter\\ComposerScripts::postInstall", "@composer dump-autoload"],
         "test": "phpunit --configuration=phpunit.ci4.xml",
         "openapi:build": "vendor/bin/openapi --format yaml --output docs/openapi.yaml docs/openapi"
     },
