--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,14 @@
     "license": "proprietary",
     "require": {
         "php": "^8.3",
-        "ext-pdo": "*",
-        "ext-mysqli": "*",
-        "ext-intl": "*",
-        "ext-gd": "*",
         "ext-bcmath": "*",
+        "ext-gd": "*",
+        "ext-intl": "*",
+        "ext-mysqli": "*",
+        "ext-pdo": "*",
         "ext-zip": "*",
-        "codeigniter4/framework": "^4.5"
+        "codeigniter4/framework": "^4.5",
+        "ramsey/uuid": "^4.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.5"
