Clarify composer.lock importance in .gitignore
Add comment to clarify the importance of composer.lock

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Composer
 /vendor/
-composer.lock
+# DO NOT ignore composer.lock — required for reproducible builds
+# composer.lock
 
 # Environment
 .env
