fix: Enable database migrations and test data setup for integration tests
- Fixed EnrollmentServiceTest: all 10 tests passing
- Added one-time migration execution in test setup
- Added required test data (schools, classes, users)
- Fixed NOT NULL constraints (school_code, password_hash)
- Reduced test errors from 117 to 106

Test improvements:
- Enrollment: 10/10 passing (100%)
- Overall: 93/206 passing (45%)

--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-pdo": "*",
         "ext-zip": "*",
         "codeigniter4/framework": "^4.5",
+        "endroid/qr-code": "^6.0",
         "ramsey/uuid": "^4.9"
     },
     "require-dev": {
