--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,7 @@ services:
     container_name: shulelabs-adminer
     restart: unless-stopped
     ports:
-      - "${ADMINER_PORT:-8081}:8080"}
+      - "${ADMINER_PORT:-8081}:8080"
     environment:
       - ADMINER_DEFAULT_SERVER=db
     networks:
