feat: Inventory Module & Auto-Learning Process
- Implemented Inventory Module (API + Web)
- Added Hostel Beds tracking
- Established 'Auto-Learning' process with LEARNINGS_LOG.md
- Updated Module Design Template and Development Guide
- Cleaned up legacy documentation

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,9 @@ Thumbs.db
 phpstan.neon.dist
 .phpcs-cache
 .psalm/
+
+# Local Development
+database.db
+database.sqlite
+public/school_sessions/
+
