feat: Implement CRUD for Transport, Hostel, and Wallets modules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -266,5 +266,8 @@
       "matchCommandLine": true
     }
   },
-  "chat.agent.maxRequests": 1000
+  "chat.agent.maxRequests": 1000,
+  "[markdown]": {
+    "diffEditor.ignoreTrimWhitespace": true
+  }
 }
